minikube/helloworld-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld11
  labels:
    app: helloworld11
    service: helloworld11
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: helloworld11
